--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 						<h1 class="h1">Marlon Garcia</h1>
 						<h2 class="h2">Multimedia Artist</h2>
-						<p>Currently styding at Cañada College, I am expecting my associates in Multimedia arts and technology as well as a certificate in Web Design, I will be attending San Jose State University in this 2018 coming Fall where I am seeking a bachelors in digital Media, I am looking forward into web development and be able to use all sort of coding styles and start my own business once I am done with school.</p>
+						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art, I am looking forward into web development and be able to use all sort of coding styles and start my own business once I am done with school.</p>
 		</div>
 	</section>
 	
