--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 	<section class="intro">
 		<div class="container">
 			<figure class="portfolio-image">
-				<img src="images/unnamed.jpg" class="marlon"/></figure>
+				<img src="" class="marlon"/></figure>
 
 						<h1 class="h1">Marlon Garcia</h1>
 						<h2 class="h2">Multimedia Artist</h2>
-						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art, I am looking forward into web development and be able to use all sort of coding styles and start my own business once I am done with school.</p>
+						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into web development and be able to use all sort of coding styles and start my own business once I am done with school.</p>
 		</div>
 	</section>
 
