--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<section class="intro">
 		<div class="container">
 			<figure class="portfolio-image">
-				<img src="" class="marlon"/></figure>
+				<img src="images/unnamed.jpg" class="marlon"/></figure>
 
 						<h1 class="h1">Marlon Garcia</h1>
 						<h2 class="h2">Multimedia Artist</h2>
