--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<img src="images/unnamed.jpg" class="marlon"/></figure>
 
 						<h1 class="h1">Marlon Garcia</h1>
-						<h2 class="h2">Multimedia Artist</h2>
-						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into web development and be able to use all sort of coding styles and start my own business once I am done with school.</p>
+						<h2 class="h2">Digital Media Artist</h2>
+						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into web development and be able to use all sort of coding styles and start my own business in the next couple of years</p>
 		</div>
 	</section>
 
@@ -45,6 +45,7 @@
 
 
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Bezier.jpg" alt="Bezier Cat"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-desktop"></div>
 
