--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/12012331_l-jpeg copy.jpg" alt="Carpenter design"></div>
 				<div class="clearfix visible-mobile"></div>
 
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/tattoosketch.jpg" alt="tattoo"></div>
 				<div class="clearfix visible-tablet"></div>
 
@@ -49,15 +50,20 @@
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-desktop"></div>
 
+
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_faceswap copy.jpg" alt="Faceswap"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 
+
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight copy.jpg" alt="Faceswap"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight1 copy.jpg" alt="5 up animated picture"></div>
+				<div class="clearfix visible-mobile"></div>
+				<div class="clearfix visible-tablet"></div>
+
+
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
-
-
-
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/E-juicebanner.jpg" alt="e-juice promotion"></div>
 		  </div>
 		</div>
