--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 						<h1 class="h1">Marlon Garcia</h1>
 						<h2 class="h2">Digital Media Artist</h2>
-						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own business in the next couple of years</p>
+						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own business in the next couple of years.</p>
 		</div>
 	</section>
 
