--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 			</div>
 	</section>
 
+<p id="contact">For general inquiries please contact <a href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
 
 	<footer class="footer">
 		<div class="container">
