--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 	</section>
 
-	<section id="gallery" class="gallery">
+	<section id="gallery" class="gallery-images">
 		<div class="container">
 			<div class="row">
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="LOGO"></div>
