--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Marlon Garcia's Portfolio</title>
-<link href="main.css" rel="stylesheet" type="text/css">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>Marlon Garcia's Portfolio</title>
+	<link href="main.css" rel="stylesheet" type="text/css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
 
 <body>
@@ -13,11 +14,11 @@
 	<section class="home">
 		<div class="container">
 			<nav class="nav">
-    			<ul>
+				<ul>
 					<li class="active"><a href="MarlonGarciaGarcia.github.io">Home</a></li>
 					<li><a href="#gallery">Gallery</a></li>
 					<li><a href="#contact">Contact</a></li>
-    			</ul>
+				</ul>
 			</nav>
 		</div>
 	</section>
@@ -25,11 +26,12 @@
 	<section class="intro">
 		<div class="container">
 			<figure class="portfolio-image">
-				<img src="images/unnamed.jpg" class="marlon"/></figure>
+				<img src="images/unnamed.jpg" class="marlon" /></figure>
 
-						<h1 class="h1">Marlon Garcia</h1>
-						<h2 class="h2">Digital Media Artist</h2>
-						<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own business in the next couple of years.</p>
+			<h1 class="h1">Marlon Garcia</h1>
+			<h2 class="h2">Digital Media Artist</h2>
+			<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own
+				business in the next couple of years.</p>
 		</div>
 	</section>
 
@@ -55,25 +57,25 @@
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 				<div class="clearfix visible-desktop"></div>
-		  </div>
+			</div>
 		</div>
 	</section>
 
 	<section id="contact" class="contactform">
-			<div class="container">
-				<div class="contact">
-					<form action="" method="post">
-						<input type="text" name="" class="inputtext" placeholder="First Name">
-						<input type="text" name="" class="inputtext" placeholder="Last Name">
-						<input type="text" name="" class="inputtext" placeholder="Your Email">
-						<textarea cols="4" rows="6" class="inputmessage" placeholder="Your Messages.."></textarea>
-						<input type="button" name="" class="submitbutton" value="Send">
-					</form>
-				</div>
+		<div class="container">
+			<div class="contact">
+				<form action="" method="post">
+					<input type="text" name="" class="inputtext" placeholder="First Name">
+					<input type="text" name="" class="inputtext" placeholder="Last Name">
+					<input type="text" name="" class="inputtext" placeholder="Your Email">
+					<textarea cols="4" rows="6" class="inputmessage" placeholder="Your Messages.."></textarea>
+					<input type="button" name="" class="submitbutton" value="Send">
+				</form>
 			</div>
+		</div>
 	</section>
 
-<p id="contact">For general inquiries please contact <a href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
+	<p id="contact">For general inquiries please contact <a href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
 
 	<footer class="footer">
 		<div class="container">
@@ -82,4 +84,5 @@
 	</footer>
 
 </body>
+
 </html>
