--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,21 +38,24 @@
 	<section id="gallery" class="gallery">
 		<div class="container">
 			<div class="row">
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="LOGO"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/12012331_l-jpeg copy.jpg" alt="Carpenter design"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/tattoosketch.jpg" alt="tattoo"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/E-juicebanner.jpg" alt="e-juice promotion"></div>
+
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Bezier.jpg" alt="Bezier Cat"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer copy.gif" alt="Painting"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
+				<div class="clearfix visible-mobile"></div>
+				<div class="clearfix visible-tablet"></div>
+				<div class="clearfix visible-desktop"></div>
+			</div>
+		</div>
+	</section>
+
+	<section id="gallery" class="gallery">
+		<div class="container">
+			<div class="row">
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1 copy.jpg" alt="3D art"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/marlon_garcia_glitch copy.jpg" alt="Glitch Art"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_convincing_senses.jpg" alt="Photography Huejotzingo"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight copy.jpg" alt="Photography Reflection"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeeingTheLight1 copy.jpg" alt="Photography Girl"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight3 copy.jpg" alt="Photography Bench"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
@@ -60,6 +63,21 @@
 			</div>
 		</div>
 	</section>
+
+	<section id="gallery" class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight copy.jpg" alt="Photography Reflection"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeeingTheLight1 copy.jpg" alt="Photography Girl"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight3 copy.jpg" alt="Photography Bench"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_convincing_senses.jpg" alt="Photography Huejotzingo"></div>
+				<div class="clearfix visible-mobile"></div>
+				<div class="clearfix visible-tablet"></div>
+				<div class="clearfix visible-desktop"></div>
+			</div>
+		</div>
+	</section>
+
 
 	<section id="contact" class="contactform">
 		<div class="container">
