--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,8 +40,8 @@
 			<div class="row">
 
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Bezier.jpg" alt="Bezier Cat"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer copy.gif" alt="Painting"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="Garcia_CH2.jpg" alt="Frog"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
@@ -71,6 +71,20 @@
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeeingTheLight1 copy.jpg" alt="Photography Girl"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_SeenTheLight3 copy.jpg" alt="Photography Bench"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Marlon_convincing_senses.jpg" alt="Photography Huejotzingo"></div>
+				<div class="clearfix visible-mobile"></div>
+				<div class="clearfix visible-tablet"></div>
+				<div class="clearfix visible-desktop"></div>
+			</div>
+		</div>
+	</section>
+
+	<section id="gallery" class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="Carpentergraphic.jpg" alt="Carpenter"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="E-juicebannerportfolio1.jpg" alt="Banner"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="GarciaM_5UP copy.jpg" alt="Animals"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="Tattoosketch.jpg" alt="Photography Huejotzingo"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 				<div class="clearfix visible-desktop"></div>
