--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,36 +30,14 @@
 
 			<h1 class="h1">Marlon Garcia</h1>
 			<h2 class="h2">Digital Media Artist</h2>
-			<p>Currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own
+			<p>Hello! my name is Marlon Garcia, I am currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own
 				business in the next couple of years.</p>
-		</div>
-	</section>
 
-	<section id="gallery" class="gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="Logo"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
-				<div class="clearfix visible-mobile"></div>
-				<div class="clearfix visible-tablet"></div>
-				<div class="clearfix visible-desktop"></div>
-			</div>
-		</div>
-	</section>
+			<p> Graduated from Cañada College with an Associates in Multimedia and a certificate in Web Design.</p>
 
-	<section id="gallery" class="gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1 copy.jpg" alt="3D art"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/marlon_garcia_glitch copy.jpg" alt="Glitch Art"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
-				<div class="clearfix visible-mobile"></div>
-				<div class="clearfix visible-tablet"></div>
-				<div class="clearfix visible-desktop"></div>
-			</div>
+			<p>Most of my work has been created with a lot of passion. I am experienced in Digital Imaging, Illustration, Animation, Video produciton, 3D designs, Web design and currently learning P5.JS.</p>
+
+			<p> Some interesting facts about me. I love playing soccer, and I was scouted by the U-13 US national Soccer team. I received couple achievements through out my entire life, atlhetically and scholarly. I love to dedicate myself because I believe hard work pays off, I love working with computers and I am always up for adventures.</p>
 		</div>
 	</section>
 
@@ -84,6 +62,34 @@
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/E-juicebannerportfolio1.jpg" alt="Banner"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Bezier.jpg" alt="Bezier Cat"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Tattoosketch.jpg" alt="Tattoo sketch"></div>
+				<div class="clearfix visible-mobile"></div>
+				<div class="clearfix visible-tablet"></div>
+				<div class="clearfix visible-desktop"></div>
+			</div>
+		</div>
+	</section>
+
+	<section id="gallery" class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="Logo"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
+				<div class="clearfix visible-mobile"></div>
+				<div class="clearfix visible-tablet"></div>
+				<div class="clearfix visible-desktop"></div>
+			</div>
+		</div>
+	</section>
+
+	<section id="gallery" class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1 copy.jpg" alt="3D art"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/marlon_garcia_glitch copy.jpg" alt="Glitch Art"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 				<div class="clearfix visible-desktop"></div>
