--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Marlon Garcia's Portfolio</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
+	<link href="sketch.html" type="sketch/background">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
