--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<title>Marlon Garcia's Portfolio</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
-	<link href="sketch.html" type="sketch/background">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
@@ -31,14 +30,16 @@
 
 			<h1 class="h1">Marlon Garcia</h1>
 			<h2 class="h2">Digital Media Artist</h2>
-			<p>Hello! my name is Marlon Garcia, I am currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of coding/design styles and start my own
+			<p>Hello! my name is Marlon Garcia, I am currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of
+				coding/design styles and start my own
 				business in the next couple of years.</p>
 
 			<p> Graduated from Cañada College with an Associates in Multimedia and a certificate in Web Design.</p>
 
 			<p>Most of my work has been created with a lot of passion. I am experienced in Digital Imaging, Illustration, Animation, Video produciton, 3D designs, Web design and currently learning P5.JS.</p>
 
-			<p> Some interesting facts about me. I love playing soccer, and I was scouted by the U-13 US national Soccer team. I received couple achievements through out my entire life, atlhetically and scholarly. I love to dedicate myself because I believe hard work pays off, I love working with computers and I am always up for adventures.</p>
+			<p> Some interesting facts about me. I love playing soccer, and I was scouted by the U-13 US national Soccer team. I received couple achievements through out my entire life, atlhetically and scholarly. I love to dedicate myself because I
+				believe hard work pays off, I love working with computers and I am always up for adventures.</p>
 		</div>
 	</section>
 
@@ -61,8 +62,8 @@
 			<div class="row">
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Carpentergraphic.jpg" alt="Carpenter"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/E-juicebannerportfolio1.jpg" alt="Banner"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/tattoosketch.jpg" alt="Tattoo sketch"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Bezier.jpg" alt="Bezier Cat"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/Tattoosketch.jpg" alt="Tattoo sketch"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 				<div class="clearfix visible-desktop"></div>
@@ -75,8 +76,8 @@
 			<div class="row">
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="Logo"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 				<div class="clearfix visible-desktop"></div>
@@ -98,8 +99,7 @@
 		</div>
 	</section>
 
-
-	<section id="contact" class="contactform">
+<!--	<section id="contact" class="contactform">
 		<div class="container">
 			<div class="contact">
 				<form action="" method="post">
@@ -113,6 +113,8 @@
 		</div>
 	</section>
 
+-->
+
 	<p id="contact">For general inquiries please contact <a href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
 
 	<footer class="footer">
@@ -122,5 +124,5 @@
 	</footer>
 
 </body>
-</html>
 
+</html>
