--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 		</div>
 	</section>
 
+	<p><a href="https://skfb.ly/6JtGH">Link to 3D design</a></p>
+	<p><a href="https://youtu.be/OO82JY_L9Dk">Link to an Abstract Video</a></p>
+	<p><a href="https://youtu.be/OO82JY_L9Dk">Link to Video as Installation</a></p>
+
 <!--	<section id="contact" class="contactform">
 		<div class="container">
 			<div class="contact">
