--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		</div>
 	</section>
 
-<p>Now I will Provide you with some links to some Video Installation and a 3D model</p>
+<p>Now I will Provide you with some links to two Video Installations and a 3D model</p>
 	<li><p><a href="https://skfb.ly/6JtGH">Link to 3D design</a></p></li>
 	<li><p><a href="https://youtu.be/OO82JY_L9Dk">Link to an Abstract Video</a></p></li>
 	<li><p><a href="https://youtu.be/x0MDzRj1Nyo">Link to Video as Installation</a></p></li>
