--- a/index.html
+++ b/index.html
@@ -99,11 +99,13 @@
 		</div>
 	</section>
 
-<p>Now I will Provide you with some links to two Video Installations and a 3D model</p>
-	<li><p><a href="https://skfb.ly/6JtGH">Link to 3D design</a></p></li>
-	<li><p><a href="https://youtu.be/OO82JY_L9Dk">Link to an Abstract Video</a></p></li>
-	<li><p><a href="https://youtu.be/x0MDzRj1Nyo">Link to Video as Installation</a></p></li>
 
+	<div class="container">
+		<p>Now I will Provide you with some links to two Video Installations and a 3D model.</p>
+			<li><p><a href="https://skfb.ly/6JtGH" target="_blank"> 3D design</a></p></li>
+			<li><p><a href="https://youtu.be/OO82JY_L9Dk" target="_blank"> Abstract Video</a></p></li>
+			<li><p><a href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> Video as Installation</a></p></li>
+	</div>
 <!--	<section id="contact" class="contactform">
 		<div class="container">
 			<div class="contact">
