--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
 			<h1 class="h1">Marlon Garcia</h1>
 			<h2 class="h2">Digital Media Artist</h2>
 			<p>Hello! my name is Marlon Garcia, I am currently styding at San Jose State University, I am expecting my bachelors in Digital Media Art in spring 2021, I am looking forward into design and web development and be able to use all sort of
-				coding/design styles and start my own
-				business in the next couple of years.</p>
+				coding/design styles and start my own	business in the next couple of years.</p>
 
-			<p> Graduated from Cañada College with an Associates in Multimedia and a certificate in Web Design.</p>
+				<p> Some interesting facts about me. I love playing soccer, and I was scouted by the U-13 US national Soccer team. I received couple achievements through out my entire life, atlhetically and scholarly. I love to dedicate myself because I
+					believe hard work pays off, I love working with computers and I am always up for adventures.</p>
+
+			<p> I graduated from Cañada College with an Associates degree in Multimedia and a certificate in Web Design.</p>
 
 			<p>Most of my work has been created with a lot of passion. I am experienced in Digital Imaging, Illustration, Animation, Video produciton, 3D designs, Web design and currently learning P5.JS.</p>
 
-			<p> Some interesting facts about me. I love playing soccer, and I was scouted by the U-13 US national Soccer team. I received couple achievements through out my entire life, atlhetically and scholarly. I love to dedicate myself because I
-				believe hard work pays off, I love working with computers and I am always up for adventures.</p>
+				<p>On the first section of my portfolio images we can see some photography pictures I took with my Nikon d3500 and I also edited them.</p>
+				<p> On the second section we can start seing graphics created with adobe Illustrator where</p>
+				<p></p>
+				<p></p>
 		</div>
 	</section>
 
@@ -102,9 +106,9 @@
 
 	<div class="container">
 		<p>Now I will Provide you with some links to two Video Installations and a 3D model.</p>
-			<li><p><a href="https://skfb.ly/6JtGH" target="_blank"> 3D design</a></p></li>
-			<li><p><a href="https://youtu.be/OO82JY_L9Dk" target="_blank"> Abstract Video</a></p></li>
-			<li><p><a href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> Video as Installation</a></p></li>
+			<li><p><a class="links" href="https://skfb.ly/6JtGH" target="_blank"> 3D design</a></p></li>
+			<li><p><a class="links" href="https://youtu.be/OO82JY_L9Dk" target="_blank"> Abstract Video</a></p></li>
+			<li><p><a class="links" href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> Video as Installation</a></p></li>
 	</div>
 <!--	<section id="contact" class="contactform">
 		<div class="container">
@@ -122,7 +126,7 @@
 
 -->
 
-	<p id="contact">For general inquiries please contact <a href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
+	<p id="contact">For general inquiries please contact <a class="links" href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
 
 	<footer class="footer">
 		<div class="container">
