--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<iframe src="sketch.html" id="animation"></iframe>
 	<section class="home">
 		<div class="container">
 			<nav class="nav">
@@ -126,7 +126,7 @@
 
 -->
 
-	<p id="contact">For general inquiries please contact <a class="links" href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</p></a>
+	<p id="contact">For general inquiries please contact <a class="links" href="mailto:marlon.garciagarcia@sjsu.edu?Subject=Hello%20Marlon" target="_top">marlon.garciagarcia@sjsu.edu</a></p>
 
 	<footer class="footer">
 		<div class="container">
