--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 	<section id="gallery" class="gallery">
 		<div class="container">
 			<div class="row">
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1 copy1.jpg" alt="3D art"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/marlon_garcia_glitch copy.jpg" alt="Glitch Art"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1.jpg" alt="3D art"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GlitchArt.jpg" alt="Glitch Art"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
 				<div class="clearfix visible-mobile"></div>
