--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 			<p>Most of my work has been created with a lot of passion. I am experienced in Digital Imaging, Illustration, Animation, Video produciton, 3D designs, Web design and currently learning P5.JS.</p>
 
-				<p>On the first section of my portfolio images we can see some photography pictures I took with my Nikon d3500 and I also edited them.</p>
-				<p> On the second section we can start seing graphics created with adobe Illustrator where</p>
-				<p></p>
+				<p>On the first section of my portfolio, we encounter some black and white photography, I used the Nikon d3500 and I also edited them them using Adobe Lightroom.</p>
+				<p> On the second section we can start seing graphics created with adobe Illustrator where I went for very random things. We can see a cerpenter, tattoo sketch, juice logo as well as my personal Logo. This projects were first draw and then sketched using different tools in Illustrator.</p>
+				<p>On the next rows we experienced couple of more digital imaging as well as illustrations, I also created some 3D art and glitch art.</p>
 				<p></p>
 		</div>
 	</section>
