--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link href="main.css" rel="stylesheet" type="text/css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+	<link href="AugmentedReality.html" type="AugmentedReality">
+	<link href="3D.html" type="3D">
+	<link href="GlitchArt.html" type="GlitchArt">
+
 </head>
 
 <body>
@@ -40,9 +44,9 @@
 
 			<p>Most of my work has been created with a lot of passion. I am experienced in Digital Imaging, Illustration, Animation, Video produciton, 3D designs, Web design and currently learning P5.JS.</p>
 
-				<p>On the first section of my portfolio images we can see some photography pictures I took with my Nikon d3500 and I also edited them.</p>
-				<p> On the second section we can start seing graphics created with adobe Illustrator where</p>
-				<p></p>
+				<p>On the first section of my portfolio, we encounter some black and white photography, I used the Nikon d3500 and I also edited them them using Adobe Lightroom.</p>
+				<p> On the second section we can start seing graphics created with adobe Illustrator where I went for very random things. We can see a cerpenter, tattoo sketch, juice logo as well as my personal Logo. This projects were first draw and then sketched using different tools in Illustrator.</p>
+				<p>On the next rows we experienced couple of more digital imaging as well as illustrations, I also created some 3D art and glitch art.</p>
 				<p></p>
 		</div>
 	</section>
@@ -62,11 +66,12 @@
 
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="Logo"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/MOSHED copy.gif" alt="MOSHED"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="AugmentedReality.html"><img class="gallery-images" src="images/GifcARds.png" alt="GifcARds"></a></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
 
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1.jpg" alt="3D art"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GlitchArt.jpg" alt="Glitch Art"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="GlitchArt.html"><img class="gallery-images" src="images/GlitchArt.jpg" alt="Glitch Art"></a></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="3D.html"><img class="gallery-images" src="images/3DMeshMash.png" alt="3D Mesh Mash"></a></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
 				<div class="clearfix visible-mobile"></div>
@@ -78,8 +83,13 @@
 
 
 	<div class="container">
-		<p>Now I will Provide you with some links to two Video Installations and a 3D model.</p>
-			<li><p><a class="links" href="https://skfb.ly/6JtGH" target="_blank"> 3D design</a></p></li>
+		<p>Link to HyperLink Website!</p>
+			<li><p><a class="links" href="CozumelTrip/index.html" target="_blank"> Cozumel Website</a></p></li>
+	</div>
+
+
+	<div class="container">
+		<p>Links to Video Installation projects</p>
 			<li><p><a class="links" href="https://youtu.be/OO82JY_L9Dk" target="_blank"> Abstract Video</a></p></li>
 			<li><p><a class="links" href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> Video as Installation</a></p></li>
 	</div>
