--- a/AugmentedReality.html
+++ b/AugmentedReality.html
@@ -17,7 +17,7 @@
   <h3>Dimensions: 3.333in. 2.947in.</h3>
 
 
-<h2>Description:</h2>
+  <h2>Description:</h2>
 
   <p>My project looks very spacial, it gives the audience the feeling of being in a different state of mind, feeling like you are in a different dimension, in a non recognizable place with the looks of a desert, I could smell the a peaceful ambient
     that the ware-wolf gives to the image. The conceptual and personal motivation about this project has been that Ive always been amused by nature, I love working with animals and the natural resources this planet has to offer, but personally
@@ -27,6 +27,14 @@
     artist I would definitely would chose Abby Covert, I really how far she has gone, the work she shows us is very unique because it is very simple and gets the job done. Abby has also worked with very big companies and that’s what makes me believe
     that DMA majors also can have and get big jobs with big companies.</p>
 
-     <a class="button button-primary" href="index.html" target="_blank">Home</a>
+  <a class="button button-primary" href="index.html" target="_blank">Home</a>
+
+
+
+  <p> For this project, you will be creating a printed trigger image and an overlay to convey a larger, interactive, augmented reality experience. Your trigger image and overlay image should be in “conversation” with one another. In other words, the
+    camera image together with the augmented one should create a new reading that emerges when both are seen together.
+    Your trigger image will be a conceptual digital collage you have made by using Adobe Photoshop and Illustrator together to manipulate images. The augmented reality overlay image will be an animated gif you have made in Photomosh. Harness your
+    skills to create a more elaborate animation or a cinematographic style gif. Just use your imagination and create a complicated animation based on a narrative.</p>
 </body>
+
 </html>
